added solution files

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-data
+#data
 __pycache__
 .python-version
-config.py
-data.py
-graph.py
-embeddings.py
+#config.py
+#data.py
+#graph.py
+#embeddings.py
